--- a/dspy_ollama_llamaindex.ipynb
+++ b/dspy_ollama_llamaindex.ipynb
@@ -40,8 +40,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "!cd /workspace/data && curl -X GET \"https://api.finra.org/data/group/finra/name/finraRulebookMock?offset=0&limit=10000&delimiter=%2C&quoteValues=true&async=false&access_token=ae4bfc7741084e2c9944\" -H  \"accept: application/json\" -H  \"Content-Type: application/json\""
    ]
@@ -50,11 +52,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg -y\n",
+    "!apt-get update\n",
+    "!apt install apt-utils vim -y\n",
+    "\n",
+    "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg\n",
     "!echo 'deb [signed-by=/etc/apt/keyrings/neotechnology.gpg] https://debian.neo4j.com stable latest' | tee -a /etc/apt/sources.list.d/neo4j.list\n",
     "\n",
     "!apt-get update\n",
-    "!apt install apt-utils -y\n",
     "!apt list -a neo4j\n",
     "!add-apt-repository universe -y\n",
     "!apt-get install neo4j=1:5.22.0 -y\n",
@@ -81,10 +85,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('/workspace/repos/agentic-ai')"
@@ -103,15 +105,6 @@
     "import pandas as pd\n",
     "\n",
     "from train_utils import get_csv_string, randomize_row_values, operators_dict, range_description_json, split_df_by_empty_columns, split_df_by_empty_rows, print_trainable_parameters\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!cd /workspace/data && curl -X GET \"https://www.ecfr.gov/api/versioner/v1/full/2024-07-23/title-17.xml?chapter=II\" -H \"accept: application/xml\" > title-17.xml"
    ]
   },
   {
@@ -192,12 +185,12 @@
     "from llama_index.llms.ollama import Ollama\n",
     "\n",
     "# model_name = \"mistral:latest\"\n",
-    "model_name = \"llama3.1:latest\"\n",
+    "model_name, num_ctx = \"llama3.1\", 128000\n",
     "# model_name = \"qwen2:1.5b\"\n",
     "# model_name = \"gemma:1.5b\"\n",
     "\n",
     "system_prompt = \"You are an expert at answering questions about rules and regulations regarding Title 17—Commodity and Securities Exchanges: CHAPTER II—SECURITIES AND EXCHANGE COMMISSION. Please provide a summary of the following text, and cite any rule or regulation codes (e.g. § 230.503, Rule 501(a)) from context that support the answer:\"\n",
-    "llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", system_prompt=system_prompt)\n",
+    "llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", system_prompt=system_prompt, context_window=num_ctx, model_type=\"chat\")\n",
     "llm.metadata"
    ]
   },
@@ -252,12 +245,13 @@
     "\n",
     "entities = Literal[\"RULES\", \"REGULATIONS\"]\n",
     "relations = Literal[\n",
-    "    \"RELATED_TO\",\n",
+    "    \"MENTIONED_BY\",\n",
     "    \"REFERENCED_BY\",\n",
     "    \"REFERS_TO\",\n",
     "]\n",
     "all_relations = [\n",
-    "    \"RELATED_TO\",\n",
+    "    # \"RELATED_TO\",\n",
+    "    \"MENTIONED_BY\",\n",
     "    \"REFERENCED_BY\",\n",
     "    \"REFERS_TO\",\n",
     "]\n",
@@ -306,13 +300,13 @@
     "\n",
     "Settings.llm = llm\n",
     "\n",
-    "Settings.chunk_size = 400\n",
-    "Settings.chunk_overlap = 50\n",
+    "Settings.chunk_size = 1000\n",
+    "Settings.chunk_overlap = 200\n",
     "embed_model_name = \"Alibaba-NLP/gte-Qwen2-1.5B-instruct\"\n",
     "# embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
     "# embed_model_name = \"hkunlp/instructor-base\"\n",
     "print(\"loading embed model...\")\n",
-    "embed_model = HuggingFaceEmbedding(model_name=embed_model_name, device='cpu')\n",
+    "embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
     "# embed_model = InstructorEmbedding(model_name=embed_model_name)\n",
     "\n",
     "Settings.embed_model = embed_model\n"
@@ -348,18 +342,32 @@
     "                        metadata=get_metadata(m),\n",
     "                        excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
     "    \n",
+    "    # extract_prompt = \"Many of the rules and regulations (e.g. § 230.503, Rule 501(a)) in the text are related to each other, mention each other, or refer to each other. Please provide a list of rules and regulations that are related to each other, and how they are related.\"\n",
+    "    \n",
     "    from llama_index.core import PropertyGraphIndex\n",
     "\n",
     "    kg_extractor = SchemaLLMPathExtractor(\n",
     "        llm=llm,\n",
+    "        # extract_prompt=extract_prompt,\n",
     "        possible_entities=entities,\n",
     "        possible_relations=relations,\n",
     "        kg_validation_schema=validation_schema,\n",
     "        # if false, allows for values outside of the schema\n",
     "        # useful for using the schema as a suggestion\n",
-    "        num_workers=4,\n",
+    "        max_triplets_per_chunk=10,\n",
+    "        num_workers=6,\n",
     "        strict=False,\n",
     "    )\n",
+    "\n",
+    "    # from llama_index.core.indices.property_graph import DynamicLLMPathExtractor\n",
+    "\n",
+    "    # kg_extractor = DynamicLLMPathExtractor(\n",
+    "    #     llm=llm,\n",
+    "    #     max_triplets_per_chunk=20,\n",
+    "    #     num_workers=4,\n",
+    "    #     allowed_entity_types=[\"RULES\", \"REGULATIONS\"],\n",
+    "    #     allowed_relation_types=all_relations,\n",
+    "    # )\n",
     "\n",
     "    # from llama_index.core.indices.property_graph import SimpleLLMPathExtractor\n",
     "\n",
@@ -369,13 +377,15 @@
     "    #     num_workers=10,\n",
     "    # )\n",
     "\n",
-    "    NUMBER_OF_ARTICLES = 50\n",
+    "    NUMBER_OF_ARTICLES = 500\n",
     "\n",
     "    neo_url = \"bolt://localhost:7687\"\n",
+    "    config={\"connection_timeout\": 240, \"connection_acquisition_timeout\": 240, \"max_connection_pool_size\": 1000}\n",
     "    graph_store = Neo4jPropertyGraphStore(\n",
     "        username=\"neo4j\",\n",
     "        password=os.getenv(\"NEO4J_PWD\"),\n",
-    "        url=neo_url\n",
+    "        url=neo_url,\n",
+    "        **config\n",
     "    )\n",
     "\n",
     "    vector_index = PropertyGraphIndex.from_documents(documents[:NUMBER_OF_ARTICLES], \n",
@@ -389,6 +399,13 @@
     "\n",
     "# query_engine = vector_index.as_retriever(similarity_top_k=3)\n",
     "query_engine = vector_index.as_query_engine(similarity_top_k=3)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Connect to `bolt://localhost:7687` and enter neo4j password"
    ]
   },
   {
