--- a/dspy_ollama_llamaindex.ipynb
+++ b/dspy_ollama_llamaindex.ipynb
@@ -40,10 +40,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "!cd /workspace/data && curl -X GET \"https://api.finra.org/data/group/finra/name/finraRulebookMock?offset=0&limit=10000&delimiter=%2C&quoteValues=true&async=false&access_token=ae4bfc7741084e2c9944\" -H  \"accept: application/json\" -H  \"Content-Type: application/json\""
    ]
@@ -55,6 +53,7 @@
     "!apt-get update\n",
     "!apt install apt-utils vim -y\n",
     "\n",
+    "!apt-get update\n",
     "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg\n",
     "!echo 'deb [signed-by=/etc/apt/keyrings/neotechnology.gpg] https://debian.neo4j.com stable latest' | tee -a /etc/apt/sources.list.d/neo4j.list\n",
     "\n",
@@ -318,7 +317,9 @@
    "source": [
     "* FIRST set password for database `neo4j-admin dbms set-initial-password <PASSWORD>`\n",
     "\n",
-    "* THEN start neo4j in terminal or tmux screen `neo4j start`"
+    "* THEN make sure the two lines have been added to neo4j.conf\n",
+    "\n",
+    "* FINALLY start neo4j in terminal or tmux screen `neo4j start`"
    ]
   },
   {
@@ -342,13 +343,13 @@
     "                        metadata=get_metadata(m),\n",
     "                        excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
     "    \n",
-    "    # extract_prompt = \"Many of the rules and regulations (e.g. § 230.503, Rule 501(a)) in the text are related to each other, mention each other, or refer to each other. Please provide a list of rules and regulations that are related to each other, and how they are related.\"\n",
+    "    extract_prompt = \"Many of the rules and regulations (e.g. § 230.503, Rule 501(a)) in the text are related to each other, mention each other, or refer to each other. Extract up to {max_triplets_per_chunk} knowledge triples of these relationships. Use the entities []'RULES', 'REGULATIONS'] and the relationships ['REFERENCED_BY', 'REFERS_TO'].\"\n",
     "    \n",
     "    from llama_index.core import PropertyGraphIndex\n",
     "\n",
     "    kg_extractor = SchemaLLMPathExtractor(\n",
     "        llm=llm,\n",
-    "        # extract_prompt=extract_prompt,\n",
+    "        extract_prompt=extract_prompt,\n",
     "        possible_entities=entities,\n",
     "        possible_relations=relations,\n",
     "        kg_validation_schema=validation_schema,\n",
@@ -407,6 +408,13 @@
    "source": [
     "Connect to `bolt://localhost:7687` and enter neo4j password"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
