--- a/dspy_ollama_llamaindex.ipynb
+++ b/dspy_ollama_llamaindex.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# !cp '/workspace/repos/agentic-ai/PPM - MCG MADISON RIDGE DST.pdf' /workspace/data\n",
     "# !cp '/workspace/repos/agentic-ai/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx' /workspace/data\n",
+    "!apt update\n",
+    "!apt install tmux\n",
     "!pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-huggingface-api llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j\n",
     "!pip3 install openpyxl sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv dspy-ai InstructorEmbedding\n",
     "!pip3 install flash-attn --no-build-isolation\n",
@@ -51,10 +53,10 @@
    "metadata": {},
    "source": [
     "!apt-get update\n",
-    "!apt install apt-utils vim -y\n",
+    "!apt-get install apt-utils vim -y\n",
     "\n",
     "!apt-get update\n",
-    "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg\n",
+    "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg -y\n",
     "!echo 'deb [signed-by=/etc/apt/keyrings/neotechnology.gpg] https://debian.neo4j.com stable latest' | tee -a /etc/apt/sources.list.d/neo4j.list\n",
     "\n",
     "!apt-get update\n",
@@ -66,6 +68,17 @@
     "!apt remove openjdk-21-jre-headless -y\n",
     "!apt install openjdk-17-jre -y\n",
     "!cd /var/lib/neo4j/plugins/ && wget https://github.com/neo4j/apoc/releases/download/5.22.0/apoc-5.22.0-core.jar\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* FIRST set password for database `neo4j-admin dbms set-initial-password <PASSWORD>`\n",
+    "\n",
+    "* THEN make sure the two lines have been added to neo4j.conf\n",
+    "\n",
+    "* FINALLY start neo4j in terminal or tmux screen `neo4j start`"
    ]
   },
   {
@@ -299,8 +312,8 @@
     "\n",
     "Settings.llm = llm\n",
     "\n",
-    "Settings.chunk_size = 1000\n",
-    "Settings.chunk_overlap = 200\n",
+    "Settings.chunk_size = 500\n",
+    "Settings.chunk_overlap = 50\n",
     "embed_model_name = \"Alibaba-NLP/gte-Qwen2-1.5B-instruct\"\n",
     "# embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
     "# embed_model_name = \"hkunlp/instructor-base\"\n",
@@ -312,15 +325,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "* FIRST set password for database `neo4j-admin dbms set-initial-password <PASSWORD>`\n",
-    "\n",
-    "* THEN make sure the two lines have been added to neo4j.conf\n",
-    "\n",
-    "* FINALLY start neo4j in terminal or tmux screen `neo4j start`"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -343,7 +352,7 @@
     "                        metadata=get_metadata(m),\n",
     "                        excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
     "    \n",
-    "    extract_prompt = \"Many of the rules and regulations (e.g. § 230.503, Rule 501(a)) in the text are related to each other, mention each other, or refer to each other. Extract up to {max_triplets_per_chunk} knowledge triples of these relationships. Use the entities []'RULES', 'REGULATIONS'] and the relationships ['REFERENCED_BY', 'REFERS_TO'].\"\n",
+    "    extract_prompt = \"Many of the rules and regulations (e.g. § 230.503, Rule 501(a)) in the text are related to each other, mention each other, or refer to each other. Extract up to {max_triplets_per_chunk} knowledge triples of these relationships. Use the entities 'RULES, REGULATIONS' and the relationships 'REFERENCED_BY, REFERS_TO'.\"\n",
     "    \n",
     "    from llama_index.core import PropertyGraphIndex\n",
     "\n",
@@ -356,7 +365,7 @@
     "        # if false, allows for values outside of the schema\n",
     "        # useful for using the schema as a suggestion\n",
     "        max_triplets_per_chunk=10,\n",
-    "        num_workers=6,\n",
+    "        num_workers=4,\n",
     "        strict=False,\n",
     "    )\n",
     "\n",
@@ -408,6 +417,13 @@
    "source": [
     "Connect to `bolt://localhost:7687` and enter neo4j password"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
