--- a/dspy_ollama_llamaindex.ipynb
+++ b/dspy_ollama_llamaindex.ipynb
@@ -7,9 +7,9 @@
     "# !cp '/workspace/repos/agentic-ai/PPM - MCG MADISON RIDGE DST.pdf' /workspace/data\n",
     "# !cp '/workspace/repos/agentic-ai/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx' /workspace/data\n",
     "!apt update\n",
-    "!apt install tmux\n",
+    "!apt install tmux -y\n",
     "!pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-huggingface-api llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j\n",
-    "!pip3 install openpyxl sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv dspy-ai InstructorEmbedding\n",
+    "!pip3 install openpyxl sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv dspy-ai graspologic\n",
     "!pip3 install flash-attn --no-build-isolation\n",
     "!curl -L https://ollama.com/download/ollama-linux-amd64 -o /usr/bin/ollama\n",
     "!chmod +x /usr/bin/ollama\n",
@@ -52,21 +52,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!apt-get update\n",
-    "!apt-get install apt-utils vim -y\n",
+    "!apt-get update && apt-get install apt-utils vim -y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "!apt-get update\n",
-    "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg -y\n",
+    "!DEBIAN_FRONTEND=\"noninteractive\"\n",
+    "!wget -O - https://debian.neo4j.com/neotechnology.gpg.key | gpg --dearmor -o /etc/apt/keyrings/neotechnology.gpg\n",
     "!echo 'deb [signed-by=/etc/apt/keyrings/neotechnology.gpg] https://debian.neo4j.com stable latest' | tee -a /etc/apt/sources.list.d/neo4j.list\n",
     "\n",
-    "!apt-get update\n",
-    "!apt list -a neo4j\n",
+    "!apt-get list -a neo4j\n",
     "!add-apt-repository universe -y\n",
     "!apt-get install neo4j=1:5.22.0 -y\n",
     "!echo \"neo4j-enterprise neo4j/question select I ACCEPT\" | debconf-set-selections\n",
     "!echo \"neo4j-enterprise neo4j/license note\" | debconf-set-selections\n",
-    "!apt remove openjdk-21-jre-headless -y\n",
-    "!apt install openjdk-17-jre -y\n",
+    "!apt-get remove openjdk-21-jre-headless -y\n",
+    "!apt-get install openjdk-17-jre -y\n",
     "!cd /var/lib/neo4j/plugins/ && wget https://github.com/neo4j/apoc/releases/download/5.22.0/apoc-5.22.0-core.jar\n"
    ]
   },
@@ -144,6 +149,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_rule_and_description(document):\n",
+    "    first_split = document.metadata['description'].split(\"  \")\n",
+    "    rule = first_split[0].split()[-1].strip()\n",
+    "    rule_description = first_split[-1].strip()\n",
+    "    return rule, rule_description\n",
+    "\n",
     "def get_tree_data(element, depth=0, list_depth=0, prev_depth=-1, lists=None, final_dict=None):\n",
     "    if lists is None:\n",
     "        lists = [[]]\n",
@@ -201,8 +212,9 @@
     "# model_name = \"qwen2:1.5b\"\n",
     "# model_name = \"gemma:1.5b\"\n",
     "\n",
-    "system_prompt = \"You are an expert at answering questions about rules and regulations regarding Title 17—Commodity and Securities Exchanges: CHAPTER II—SECURITIES AND EXCHANGE COMMISSION. Please provide a summary of the following text, and cite any rule or regulation codes (e.g. § 230.503, Rule 501(a)) from context that support the answer:\"\n",
-    "llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", system_prompt=system_prompt, context_window=num_ctx, model_type=\"chat\")\n",
+    "# system_prompt = \"You are an expert at answering questions about rules and regulations regarding Title 17—Commodity and Securities Exchanges: CHAPTER II—SECURITIES AND EXCHANGE COMMISSION. Please provide a summary of the following text, and cite any rule or regulation codes (e.g. § 230.503, Rule 501(a)) from context that support the answer:\"\n",
+    "# llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", system_prompt=system_prompt, context_window=num_ctx, model_type=\"chat\", is_function_calling_model=False)\n",
+    "llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", context_window=num_ctx, model_type=\"chat\", is_function_calling_model=False, request_timeout=240.0)\n",
     "llm.metadata"
    ]
   },
@@ -255,22 +267,26 @@
     "from typing import Literal\n",
     "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor\n",
     "\n",
-    "entities = Literal[\"RULES\", \"REGULATIONS\"]\n",
+    "entities = Literal[\"RULE\", \"REGULATION\", \"LAW_OR_ACT\"]\n",
     "relations = Literal[\n",
+    "    \"RELATED_TO\",\n",
     "    \"MENTIONED_BY\",\n",
+    "    \"MENTIONS\",\n",
     "    \"REFERENCED_BY\",\n",
     "    \"REFERS_TO\",\n",
     "]\n",
     "all_relations = [\n",
-    "    # \"RELATED_TO\",\n",
+    "    \"RELATED_TO\",\n",
     "    \"MENTIONED_BY\",\n",
+    "    \"MENTIONS\",\n",
     "    \"REFERENCED_BY\",\n",
     "    \"REFERS_TO\",\n",
     "]\n",
     "\n",
     "validation_schema = {\n",
-    "    \"Rules\": all_relations,\n",
-    "    \"Regulations\": all_relations\n",
+    "    \"Rule\": all_relations,\n",
+    "    \"Regulation\": all_relations,\n",
+    "    \"Out_of_dataset_law_or_act\": [\"MENTIONED_BY\",\"REFERENCED_BY\",\"RELATED_TO\"],\n",
     "}\n"
    ]
   },
@@ -308,7 +324,6 @@
     "\n",
     "access_token = os.getenv('HF_TOKEN')\n",
     "llama_api_key = os.getenv('LLAMA_API_KEY')\n",
-    "persist_dir = \"/workspace/data/storage/sec\"\n",
     "\n",
     "Settings.llm = llm\n",
     "\n",
@@ -325,11 +340,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "documents = [Document(text=t, \n",
+    "                    metadata=get_metadata(m, metadata={\"description\":None}),\n",
+    "                    excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
+    "subset_docs = documents[NUMBER_OF_ARTICLES:NUMBER_OF_ARTICLES+40]\n",
+    "NUMBER_OF_ARTICLES = 1090\n",
+    "pos_ent, pos_rel = [], []\n",
+    "for doc in subset_docs:\n",
+    "    rule, rule_description = get_rule_and_description(doc)\n",
+    "    pos_ent.append(rule)\n",
+    "    pos_rel.append(rule_description)"
+   ]
   },
   {
    "cell_type": "code",
@@ -337,8 +361,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "print('loading data to vector store...')\n",
+    "persist_dir = \"/workspace/data/storage/sec\"\n",
     "\n",
     "if os.path.exists(persist_dir):\n",
     "    print(f'    loading from {persist_dir}...')\n",
@@ -349,25 +373,47 @@
     "else:\n",
     "    print(f'    building from scratch...')\n",
     "    documents = [Document(text=t, \n",
-    "                        metadata=get_metadata(m),\n",
+    "                        metadata=get_metadata(m, metadata={\"description\":None}),\n",
     "                        excluded_llm_metadata_keys=[\"title\", \"chapter\"],) for m,t in data.items()]\n",
+    "    # extract_prompt = \"Many of the rules and regulations (e.g. § 230.503, Rule 13d-3(a)) in the text are related to each other, mention each other, or refer to each other. Extract up to {max_triplets_per_chunk} knowledge triples of these relationships. Use the entities 'RULES, REGULATIONS' and the relationships 'REFERENCED_BY, REFERS_TO'.\"\n",
+    "    extract_prompt = \"Many of the rules and regulations (e.g. § 230.503, Rule 13d-3(a)) in the text are related to each other, mention each other, or refer to each other. Extract up to {max_triplets_per_chunk} knowledge triples of these relationships, along with any out-of-dataset laws or acts mentioned.\"\n",
     "    \n",
-    "    extract_prompt = \"Many of the rules and regulations (e.g. § 230.503, Rule 501(a)) in the text are related to each other, mention each other, or refer to each other. Extract up to {max_triplets_per_chunk} knowledge triples of these relationships. Use the entities 'RULES, REGULATIONS' and the relationships 'REFERENCED_BY, REFERS_TO'.\"\n",
-    "    \n",
+    "    import random\n",
     "    from llama_index.core import PropertyGraphIndex\n",
+    "    linked = ['240.13a-15',\n",
+    "    '229.1101',\n",
+    "    '239.24',\n",
+    "    '274.5',\n",
+    "    '270.30',\n",
+    "    '240.13h-1',\n",
+    "    '242.600']\n",
+    "    doc_linked = []\n",
+    "    for doc in documents:\n",
+    "        rule, rule_description = get_rule_and_description(doc)\n",
+    "        for linked_rule in linked:\n",
+    "            if rule in linked_rule:\n",
+    "                doc_linked.append(doc)\n",
+    "    doc_linked+=random.sample(documents, 20)\n",
+    "    len(doc_linked)\n",
+    "    # NUMBER_OF_ARTICLES = 1090\n",
+    "    pos_ent, pos_rel = [], []\n",
+    "    for doc in doc_linked:\n",
+    "        rule, rule_description = get_rule_and_description(doc)\n",
+    "        pos_ent.append(rule)\n",
+    "        pos_rel.append(rule_description)\n",
     "\n",
     "    kg_extractor = SchemaLLMPathExtractor(\n",
     "        llm=llm,\n",
     "        extract_prompt=extract_prompt,\n",
     "        possible_entities=entities,\n",
     "        possible_relations=relations,\n",
+    "        # possible_relation_props=pos_rel,\n",
+    "        # possible_entity_props=pos_ent,\n",
     "        kg_validation_schema=validation_schema,\n",
-    "        # if false, allows for values outside of the schema\n",
-    "        # useful for using the schema as a suggestion\n",
     "        max_triplets_per_chunk=10,\n",
     "        num_workers=4,\n",
-    "        strict=False,\n",
-    "    )\n",
+    "        strict=False\n",
+    "        )\n",
     "\n",
     "    # from llama_index.core.indices.property_graph import DynamicLLMPathExtractor\n",
     "\n",
@@ -387,7 +433,7 @@
     "    #     num_workers=10,\n",
     "    # )\n",
     "\n",
-    "    NUMBER_OF_ARTICLES = 500\n",
+    "    NUMBER_OF_ARTICLES = 1090\n",
     "\n",
     "    neo_url = \"bolt://localhost:7687\"\n",
     "    config={\"connection_timeout\": 240, \"connection_acquisition_timeout\": 240, \"max_connection_pool_size\": 1000}\n",
@@ -395,15 +441,17 @@
     "        username=\"neo4j\",\n",
     "        password=os.getenv(\"NEO4J_PWD\"),\n",
     "        url=neo_url,\n",
+    "        database=\"neo4j_2\",\n",
     "        **config\n",
     "    )\n",
     "\n",
-    "    vector_index = PropertyGraphIndex.from_documents(documents[:NUMBER_OF_ARTICLES], \n",
+    "    vector_index = PropertyGraphIndex.from_documents(doc_linked, #documents[NUMBER_OF_ARTICLES:NUMBER_OF_ARTICLES+40], \n",
     "                                                     llm=llm,\n",
     "                                                     property_graph_store=graph_store, \n",
     "                                                     embed_model=embed_model, \n",
     "                                                     kg_extractors=[kg_extractor],\n",
     "                                                     show_progress=True)\n",
+    "    \n",
     "    # vector_index = VectorStoreIndex.from_documents(documents, embed_model=embed_model, show_progress=True)\n",
     "    vector_index.storage_context.persist(persist_dir=persist_dir)\n",
     "\n",
@@ -423,14 +471,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Neo4jPropertyGraphStore?"
+   ]
   },
   {
    "cell_type": "code",
